Use newer command line tools