@@ -41,11 +41,10 @@ APK_LOCATION=""
 
 if [ "$should_setup_emulator" == "true" ]; then
   # hard coding path is bad
-  export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.xml.bind'
-  /Users/buildcontextual/Library/Android/sdk/tools/bin/sdkmanager --install 'system-images;android-TiramisuPrivacySandbox;google_apis_playstore;x86_64'
-  /Users/buildcontextual/Library/Android/sdk/tools/bin/sdkmanager --install emulator
-  echo "no" | /Users/buildcontextual/Library/Android/sdk/tools/bin/avdmanager --verbose create avd --force --name "contextual_sdk_emulator" --package "system-images;android-TiramisuPrivacySandbox;google_apis_playstore;x86_64"
-  /Users/buildcontextual/Library/Android/sdk/tools/bin/emulator -avd contextual_sdk_emulator -noaudio -no-boot-anim -netdelay none -accel on -no-window -no-snapshot -gpu swiftshader_indirect
+  /Users/buildcontextual/Library/Android/sdk/cmdline-tools/latest/bin/sdkmanager --install 'system-images;android-TiramisuPrivacySandbox;google_apis_playstore;x86_64'
+  /Users/buildcontextual/Library/Android/sdk/cmdline-tools/latest/bin/sdkmanager --install emulator
+  echo "no" | /Users/buildcontextual/Library/Android/sdk/cmdline-tools/latest/bin/avdmanager --verbose create avd --force --name "contextual_sdk_emulator" --package "system-images;android-TiramisuPrivacySandbox;google_apis_playstore;x86_64"
+  emulator -avd contextual_sdk_emulator -noaudio -no-boot-anim -netdelay none -accel on -no-window -no-snapshot -gpu swiftshader_indirect
 fi
 
 
